--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,11 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-resteasy</artifactId>
+      <artifactId>quarkus-resteasy-reactive</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-resteasy-qute</artifactId>
+      <artifactId>quarkus-resteasy-reactive-qute</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
